# Endee.io-placement-assessment

./: README.md  pyproject.toml  requirements.txt
docs/: product_docs.md
src/endee_rag_assistant/: chunking.py  config.py  embeddings.py  endee_client.py  main.py  rag.py
tests/: test_chunking.py  test_rag.py
